Adicionei mais um paragrafo

--- a/site-teste/index.html
+++ b/site-teste/index.html
@@ -14,5 +14,12 @@
     principais Honshu, Hokkaido, Kyushu e Shikoku. Apesar de sua área relativamente pequena,
     o Japão possui uma rica diversidade de paisagens, desde planícies costeiras densamente
     povoadas até regiões montanhosas com vulcões ativos e altas altitudes, como o Monte Fuji</p>
+<p>Relevo e Topografia:
+    Montanhas:
+    O relevo japonês é predominantemente montanhoso, com destaque para os Alpes Japoneses e o Monte Fuji, o ponto mais alto do país.
+    Planícies:
+    As planícies costeiras, como a Planície de Kanto (onde Tóquio está localizada), são áreas de alta densidade populacional e atividade econômica.
+    Vulcões e Terremotos:
+    Devido à sua localização no Anel de Fogo do Pacífico, o Japão é propenso a terremotos e atividade vulcânica, com muitos vulcões ativos e uma história de grandes terremotos e tsunamis. </p>
 </body>
 </html>
