--- a/site-teste/index.html
+++ b/site-teste/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Olá seja bem vindo!</h1>
 <hr>
-//linha horizontal
+<!--linha horizontal**-->
 <p>O Japão, um país insular localizado no leste da Ásia, é conhecido por sua geografia única e
     complexa. Caracterizado por um relevo montanhoso, com cerca de 70 a 80% do território coberto
     por montanhas, o país é formado por um arquipélago de mais de 6.800 ilhas, sendo as quatro
